<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/layout_color"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/main_activity_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_element_horizontal_margin"
        android:layout_marginRight="@dimen/activity_element_horizontal_margin"
        android:layout_marginTop="@dimen/text_view_vertical_margin"
        android:layout_marginBottom="@dimen/text_view_vertical_margin"
        android:gravity="center"
        android:textSize="@dimen/text_view_text_size"
    />

    <Button
        android:text="@string/spotify_app"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_element_horizontal_margin"
        android:layout_marginRight="@dimen/activity_element_horizontal_margin"
        android:layout_marginTop="@dimen/activity_element_vertical_margin"
        android:layout_marginBottom="@dimen/activity_element_vertical_margin"
        android:layout_gravity="center"
        android:background="@color/pre_capstone_color"
        android:onClick="displayAppMessage"
    />

    <Button
        android:text="@string/scores_app"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_element_horizontal_margin"
        android:layout_marginRight="@dimen/activity_element_horizontal_margin"
        android:layout_marginTop="@dimen/activity_element_vertical_margin"
        android:layout_marginBottom="@dimen/activity_element_vertical_margin"
        android:layout_gravity="center"
        android:background="@color/pre_capstone_color"
        android:onClick="displayAppMessage"
    />

    <Button
        android:text="@string/library_app"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_element_horizontal_margin"
        android:layout_marginRight="@dimen/activity_element_horizontal_margin"
        android:layout_marginTop="@dimen/activity_element_vertical_margin"
        android:layout_marginBottom="@dimen/activity_element_vertical_margin"
        android:layout_gravity="center"
        android:background="@color/pre_capstone_color"
        android:onClick="displayAppMessage"
    />

    <Button
        android:text="@string/big_app"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_element_horizontal_margin"
        android:layout_marginRight="@dimen/activity_element_horizontal_margin"
        android:layout_marginTop="@dimen/activity_element_vertical_margin"
        android:layout_marginBottom="@dimen/activity_element_vertical_margin"
        android:layout_gravity="center"
        android:background="@color/pre_capstone_color"
        android:onClick="displayAppMessage"
    />

    <Button
        android:text="@string/reader_app"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_element_horizontal_margin"
        android:layout_marginRight="@dimen/activity_element_horizontal_margin"
        android:layout_marginTop="@dimen/activity_element_vertical_margin"
        android:layout_marginBottom="@dimen/activity_element_vertical_margin"
        android:layout_gravity="center"
        android:background="@color/pre_capstone_color"
        android:onClick="displayAppMessage"
    />

    <Button
        android:text="@string/capstone_app"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_element_horizontal_margin"
        android:layout_marginRight="@dimen/activity_element_horizontal_margin"
        android:layout_marginTop="@dimen/activity_element_vertical_margin"
        android:layout_marginBottom="@dimen/activity_element_vertical_margin"
        android:layout_gravity="center"
        android:background="@color/capstone_color"
        android:textColor="@color/white"
        android:onClick="displayAppMessage"
    />

</LinearLayout>
